# prism

./: .gitignore  .prism-session.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  typos.toml
cli/: Cargo.toml
cli/src/gateway/: types.rs
crates/prism/: Cargo.toml
crates/prism-cli/: Cargo.toml
crates/prism-cli/src/: acp.rs  approval_bridge.rs  common.rs  compile_check.rs  compression.rs  config.rs  context.rs  conversation.rs  git.rs  instructions.rs  lib.rs  main.rs  memory.rs  permissions.rs  persona.rs  render.rs  repl.rs  session.rs  skills.rs
crates/prism-cli/src/agent/: background.rs  mod.rs  spawn.rs
crates/prism-cli/src/hooks/: config.rs  mod.rs
crates/prism-cli/src/mcp/: client.rs  config.rs  mod.rs  transport.rs  types.rs
crates/prism-cli/src/request_replay/: generate.rs  mod.rs  openapi.rs  run.rs
crates/prism-cli/src/tools/: cache.rs  computer.rs  files.rs  mod.rs  search.rs  shell.rs  web.rs
crates/prism-cli/tests/: acp_integration.rs
crates/prism-client/: Cargo.toml
crates/prism-client/src/: lib.rs  retry.rs
crates/prism-context/: Cargo.toml
crates/prism-context/src/: config.rs  error.rs  lib.rs  memory_extract.rs  persona.rs  scheduler.rs  skills.rs
crates/prism-context/src/model/: mod.rs
crates/prism-context/src/personas/: bug-investigator.toml  pr-reviewer.toml  refactorer.toml  work-ducky.toml
crates/prism-context/src/store/: mod.rs
crates/prism-dashboard/: Cargo.toml
crates/prism-dashboard/src/: panel.rs  prism_dashboard.rs  types.rs
crates/prism-hq/: Cargo.toml
crates/prism-hq/src/: activity_bus.rs  agent_roster_panel.rs  agent_spawner.rs  agent_view.rs  approval_gate.rs  command_center.rs  context_panel.rs  context_service.rs  dashboard_panel.rs  dashboard_types.rs  decision_executor.rs  dispatch.rs  hq_state.rs  inbox_item.rs  inline_forms.rs  manager_surface.rs  mission_panel.rs  navigator_panel.rs  notification.rs  orchestrator_filter.rs  panel_types.rs  plan_dispatch.rs  plan_view.rs  plans_panel.rs  postman_panel.rs  postman_request_item.rs  prism_hq.rs  review_packet.rs  review_panel.rs  running_agents.rs  session_history_panel.rs  status_indicator.rs  supervisor.rs  task_board.rs  task_board_panel.rs  thread_view.rs  types.rs
crates/prism-hq/src/pixel_office/: agent_bridge.rs  agent_office_item.rs  characters.rs  game_loop.rs  layout.rs  mod.rs  office_state.rs  panel.rs  pathfinding.rs  renderer.rs  sprites.rs
crates/prism/migrations/postgres/: 001_virtual_keys.sql  002_prompts.sql  003_budget_hierarchy.sql  004_key_rotation.sql  005_tenant_users.sql  006_model_aliases.sql  006_session_budget.sql  007_audit_events.sql  008_rotation_scheduler.sql  009_key_ip_cors.sql  010_debug_sessions.sql
crates/prism/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  types.rs
crates/prism/src/alerts/: anomaly.rs  budget_watcher.rs  checker.rs  mod.rs  notify.rs  types.rs
crates/prism/src/api/: agents.rs  alerts.rs  aliases.rs  analytics.rs  audit.rs  billing.rs  budgets.rs  config_reload.rs  costs.rs  debug.rs  health.rs  interop.rs  keys.rs  local_stats.rs  mcp.rs  metrics.rs  mod.rs  models.rs  openapi.rs  prompts.rs  routing.rs  sessions.rs  stats.rs  workflows.rs
crates/prism/src/benchmark/: judge.rs  mod.rs  refresh.rs  sampler.rs
crates/prism/src/billing/: aggregator.rs  invoice_parser.rs  mod.rs  reconciler.rs  types.rs
crates/prism/src/cache/: mod.rs  semantic.rs  store.rs
crates/prism/src/classifier/: embedding.rs  llm_fallback.rs  mod.rs  rules.rs  taxonomy.rs
crates/prism/src/compliance/: export.rs  frameworks.rs  mod.rs
crates/prism/src/enterprise/: mod.rs  rbac.rs  types.rs
crates/prism/src/experiment/: adjuster.rs  bandit.rs  engine.rs  feedback.rs  mod.rs
crates/prism/src/finetuning/: export.rs  types.rs
crates/prism/src/guardrails/: keywords.rs  mod.rs  pii.rs  policy.rs
crates/prism/src/interop/: adapters.rs  bridge.rs  metering.rs  mod.rs  protocol.rs  types.rs
crates/prism/src/keys/: audit.rs  budget.rs  jwt.rs  mod.rs  rate_limit.rs  virtual_key.rs
crates/prism/src/mcp/: extractor.rs  mod.rs  types.rs  writer.rs
crates/prism/src/models/: alias.rs  mod.rs
crates/prism/src/observability/: local_writer.rs  metrics.rs  mod.rs  otel.rs  schema.rs  writer.rs
crates/prism/src/optimization/: candidates.rs  mod.rs  types.rs
crates/prism/src/prompts/: store.rs  types.rs
crates/prism/src/providers/: anthropic.rs  azure_openai.rs  bedrock.rs  circuit_breaker.rs  google.rs  groq.rs  health.rs  mistral.rs  mod.rs  openai.rs
crates/prism/src/proxy/: anthropic_handler.rs  batch.rs  builder.rs  circuit_breaker.rs  completions_handler.rs  context_window.rs  cost.rs  handler.rs  mod.rs  predict_edits.rs  retry.rs  streaming.rs
crates/prism/src/routing/: balancer.rs  engine.rs  fitness.rs  live_judge.rs  mod.rs  policy.rs  session.rs  traffic.rs  types.rs
crates/prism/src/server/: embedded.rs  middleware.rs  mod.rs  router.rs
crates/prism/src/waste/: detector.rs  handler.rs  local_detector.rs  mod.rs
crates/prism/src/workflows/: engine.rs  types.rs
crates/uglyhat/: Cargo.toml  schema.sql
crates/uglyhat-panel/: Cargo.toml
crates/uglyhat-panel/src/: agent_roster_panel.rs  approval_gate.rs  service.rs  session_history_panel.rs  task_board_panel.rs  types.rs  uglyhat_panel.rs
crates/uglyhat-types/: Cargo.toml
crates/uglyhat-types/src/: uglyhat_types.rs
crates/uglyhat/src/: client.rs  config.rs  error.rs  github.rs  lib.rs  main.rs  util.rs  webhook.rs
crates/uglyhat/src/api/: activity.rs  agent.rs  apikey.rs  context.rs  decision.rs  dependency.rs  epic.rs  handoff.rs  health.rs  initiative.rs  mod.rs  note.rs  task.rs  workspace.rs
crates/uglyhat/src/middleware/: auth.rs  mod.rs
crates/uglyhat/src/model/: enums.rs  metrics.rs  mod.rs  (+2 more)
ide/semantic_index/: Cargo.toml
ide/semantic_index/src/: chunking.rs  db.rs  embedding.rs  indexer.rs  lib.rs  search.rs
sdks/python/: pyproject.toml
sdks/python/prism_gateway/: __init__.py  chat.py  client.py  embeddings.py  exceptions.py  keys.py
(+571 files in other folders)
